--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "zone.js": "0.6.26",
     "core-js": "^2.4.1",
     "ng2-redux": "^5.1.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "dexie": "^1.5.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.0.0",
